test/zinc_source/compile_errors/structs/10_anon_wrong_field_type.zn
// expected-error: parameter 'record' expects a compatible 'struct\{name:string\}' value

fn greet(record: struct {
    name: string
}) {
    print(record.name)
}

fn main() {
    record = struct {
        name: 7
    }
    greet(record)
}
